--- a/grocery-app/grocery-backend-app/product-service/src/main/resources/application.properties
+++ b/grocery-app/grocery-backend-app/product-service/src/main/resources/application.properties
@@ -1,1 +1,33 @@
 spring.application.name=product-service
+
+server.port = 8000
+
+spring.datasource.url = jdbc:mysql://localhost:3306/ecom_grocery_product
+spring.datasource.username = root
+spring.datasource.password = Root
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+spring.sql.init.mode=always
+
+spring.sql.init.data-locations=classpath:data.sql
+
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
+
+# TO create or update or create-drop or validate the tables in the database
+spring.jpa.hibernate.ddl-auto = update
+
+# To show the queries in the logging
+spring.jpa.show-sql = true
+
+# To format the sql query with space and better readability
+spring.jpa.properties.hibernate.format_sql=true
+
+# This property specifies the strategy used by Spring
+# MVC to match URL paths in your controllers
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+#This property specifies the Hibernate dialect to use.
+# The dialect is a set of SQL grammar rules that Hibernate uses to generate
+# SQL queries specific to the database you are using.
+# In this case, MySQL8Dialect is used, which is suitable for MySQL 8 databases.
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
