--- a/grocery-app/grocery-backend-app/product-service/src/main/resources/application.properties
+++ b/grocery-app/grocery-backend-app/product-service/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.sql.init.data-locations=classpath:data.sql
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
 
 # TO create or update or create-drop or validate the tables in the database
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 
 # To show the queries in the logging
 spring.jpa.show-sql = true
