Modified Product service

--- a/grocery-app/grocery-backend-app/product-service/src/main/resources/application.properties
+++ b/grocery-app/grocery-backend-app/product-service/src/main/resources/application.properties
@@ -7,14 +7,14 @@ spring.datasource.username = root
 spring.datasource.password = Root
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
-spring.sql.init.data-locations=classpath:data.sql
+#spring.sql.init.data-locations=classpath:data.sql
 
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
 
 # TO create or update or create-drop or validate the tables in the database
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
 
 # To show the queries in the logging
 spring.jpa.show-sql = true
@@ -31,3 +31,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 # SQL queries specific to the database you are using.
 # In this case, MySQL8Dialect is used, which is suitable for MySQL 8 databases.
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+project.poster=posters/
+base.url=http://localhost:8000
+
